--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
 	--black: #141414;
 	--white: #f0f0f0;
 	--white-10: #f0f0f00f;
+	--white-20: #f0f0f025;
 	--white-30: #f0f0f04d;
 	--white-50: #f0f0f080;
 	--accent: #ffb81c;
