--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 :root {
 	--ticker-duration: 3000s;
 	--black: #141414;
-	--white: #f0f0f0;
+	--white: #e4e4e4;
 	--white-10: #f0f0f01a;
 	--white-20: #f0f0f033;
 	--white-30: #f0f0f04d;
