--- a/src/app.css
+++ b/src/app.css
@@ -126,7 +126,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: dahlia, sans-serif;
+	font-family: nb-television, sans-serif;
 }
 
 /* HEADING */
@@ -162,7 +162,7 @@ h5 {
 
 h6 {
 	font-size: 24px;
-	line-height: 130%;
+	line-height: 150%;
 	font-weight: 300;
 }
 
