--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 	--white-20: #f0f0f033;
 	--white-30: #f0f0f04d;
 	--white-50: #f0f0f080;
-	--accent: #08f560;
+	--accent: #feb74c;
 	--error: #0827f5;
 }
 
