--- a/src/app.css
+++ b/src/app.css
@@ -3,10 +3,8 @@
 
 /* APP */
 :root {
-	--black: #141414;
+	--black: #232323;
 	--white: #d0d0d0;
-	--accent: #d0d0d0;
-	--blue: #232323;
 }
 
 html,
@@ -14,7 +12,7 @@ body {
 	position: relative;
 	width: 100%;
 	background: var(--white);
-	color: var(--accent);
+	color: var(--white);
 	z-index: 0;
 	overflow-x: hidden;
 }
@@ -36,14 +34,14 @@ a {
 a {
 	color: var(--white);
 	background: var(--white);
-	border: solid 1px var(--blue);
+	border: solid 1px var(--black);
 	padding: 2px 6px;
 
 	text-decoration: none;
 }
 
 a:hover {
-	color: var(--blue);
+	color: var(--black);
 }
 
 ::-moz-selection {
@@ -105,6 +103,6 @@ a:hover {
 	}
 
 	a {
-		color: var(--blue);
+		color: var(--black);
 	}
 }
