--- a/src/app.css
+++ b/src/app.css
@@ -107,7 +107,7 @@ a.centreButton.prevent:hover {
 	background: var(--black);
 	border: solid 1px var(--white);
 	color: var(--white);
-	max-width: 40vw;
+	max-width: 100%;
 	cursor: pointer;
 	user-select: none;
 }
