--- a/src/app.css
+++ b/src/app.css
@@ -57,16 +57,20 @@ a {
 }
 
 a {
+	padding: 4px 8px;
+	border-radius: 8px;
+}
+
+a.hide {
 	color: var(--background);
 	background: var(--background);
 	border: solid 1px var(--primary-50);
-	padding: 4px 8px;
 
 	text-decoration: none;
 }
 
-a:hover {
-	color: var(--primary-90);
+a.hide:hover {
+	color: var(--accent);
 }
 
 ::-moz-selection {
@@ -164,19 +168,19 @@ a.centreButton.alt:hover {
 	p,
 	a {
 		font-size: 14px;
-		margin: 4px 0;
+		margin: 2px 0;
 	}
 
 	h1 {
-		font-size: 32px;
-		margin: 4px 0;
+		font-size: 33px;
+		margin: 2px 0;
 	}
 
 	h3 {
 		font-size: 15px;
 	}
 
-	a {
-		color: var(--black);
+	a.hide {
+		color: var(--accent);
 	}
 }
