change primary color

--- a/src/app.css
+++ b/src/app.css
@@ -3,9 +3,9 @@
 
 /* APP */
 :root {
-	--primary: #f0f0f0;
-	--primary-90: #f0f0f0e6;
-	--primary-50: #f0f0f080;
+	--primary: #dcdcdc;
+	--primary-90: #dcdcdce6;
+	--primary-50: #dcdcdc80;
 	--background: #232323;
 	--background-50: #23232380;
 	--accent: #f2cd5e;
