--- a/src/app.css
+++ b/src/app.css
@@ -47,7 +47,7 @@ h3 {
 	color: var(--black);
 }
 
-p,
+/* p,
 a {
 	font-size: 15px;
 	font-weight: 300;
@@ -71,7 +71,7 @@ a.hide {
 
 a.hide:hover {
 	color: var(--accent);
-}
+} */
 
 ::-moz-selection {
 	/* Code for Firefox */
