--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,8 @@ html {
 
 html,
 body {
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	position: relative;
 	color: var(--primary);
 	overflow-x: hidden;
