--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
 	--primary: #d0d0d0;
 	/* --primary-90: #d0d0d0e6;
 	--primary-50: #d0d0d080; */
-	--background-fallback: #faf9f6;
+	--background-fallback: #1b1b1b;
 	--background: linear-gradient(115deg, #141414, #232323, #141414);
 	--background-50: #d0d0d080;
 	--accent: #f2cd5e;
