--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
 	/* --primary-90: #d0d0d0e6;
 	--primary-50: #d0d0d080; */
 	--background-fallback: #1b1b1b;
-	--background: linear-gradient(115deg, #141414, #232323, #141414);
+	--background: linear-gradient(115deg, #0b0b0b, #232323, #0b0b0b);
 	--background-50: #d0d0d080;
 	--accent: #f2cd5e;
 
@@ -19,11 +19,12 @@
 
 html {
 	background: var(--background-fallback);
-	background: var(--background);
 }
 
 html,
 body {
+	width: 100%;
+	height: 100%;
 	position: relative;
 	color: var(--primary);
 	overflow-x: hidden;
@@ -92,6 +93,12 @@ a.hide:hover {
 ::selection {
 	color: red;
 	background: yellow;
+}
+
+@font-face {
+	font-family: sirap;
+	src: url(/fonts/sirap.woff) format('woff');
+	font-weight: 400;
 }
 
 @font-face {
