--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
 	--primary: #d0d0d0;
 	/* --primary-90: #d0d0d0e6;
 	--primary-50: #d0d0d080; */
-	--background-fallback: #ff0000;
+	--background-fallback: #440000;
 	--background: linear-gradient(115deg, #0b0b0b, #1b1b1b, #0b0b0b);
 	--background-50: #d0d0d080;
 	--accent: #f2cd5e;
