--- a/src/app.css
+++ b/src/app.css
@@ -9,66 +9,40 @@
 
 html,
 body {
-	width: 100%;
-	height: 100%;
 	position: relative;
-	color: var(--primary);
+	width: 100%;
+	background: var(--white);
+	color: var(--white);
+	z-index: 0;
 	overflow-x: hidden;
-	user-select: none;
-	touch-action: manipulation;
 }
 
 body {
 	display: flex;
 	justify-content: center;
-	font-family: untitled-sans, sans-serif;
+	font-family: untitled-sans;
 	box-sizing: border-box;
 	text-transform: uppercase;
-	font-weight: 300;
 }
 
-h1 {
-	font-family: 'dahlia', sans-serif;
-	font-size: 44px;
-	line-height: 44px;
-	font-weight: 500;
-	text-transform: lowercase;
-	margin-bottom: 6px;
-}
-
-h3 {
-	font-family: 'dahlia', sans-serif;
-	font-size: 16px;
-	margin-top: 8px;
-	margin-bottom: 8px;
-	color: var(--black);
-}
-
-/* p,
+p,
 a {
-	font-size: 15px;
 	font-weight: 300;
-	letter-spacing: 0.028em;
-	margin: 2px 0;
+	margin: 4px 0;
 }
 
-a,
-header p {
-	padding: 4px 8px;
-	border-radius: 8px;
-}
-
-a.hide {
-	color: var(--background);
-	background: var(--background);
-	border: solid 1px var(--primary-50);
+a {
+	color: var(--white);
+	background: var(--white);
+	border: solid 1px var(--black);
+	padding: 2px 6px;
 
 	text-decoration: none;
 }
 
-a.hide:hover {
-	color: var(--accent);
-} */
+a:hover {
+	color: var(--black);
+}
 
 ::-moz-selection {
 	/* Code for Firefox */
@@ -79,12 +53,6 @@ a.hide:hover {
 ::selection {
 	color: red;
 	background: yellow;
-}
-
-@font-face {
-	font-family: sirap;
-	src: url(/fonts/sirap.woff) format('woff');
-	font-weight: 400;
 }
 
 @font-face {
@@ -100,15 +68,9 @@ a.hide:hover {
 }
 
 @font-face {
-	font-family: untitled-sans;
-	src: url(/fonts/test-untitled-sans-medium.woff2) format('woff2');
-	font-weight: 500;
-}
-
-@font-face {
-	font-family: untitled-sans;
-	src: url(/fonts/test-untitled-sans-regular.woff2) format('woff2');
-	font-weight: 400;
+	font-family: dahlia;
+	src: url(/fonts/dahlia-bold.woff) format('woff');
+	font-weight: 700;
 }
 
 @font-face {
@@ -176,25 +138,11 @@ a.centreButton.alt:hover {
 	}
 
 	body {
+		padding: 0 2rem;
 		margin: 0;
 	}
 
-	p,
 	a {
-		font-size: 14px;
-		margin: 2px 0;
-	}
-
-	h1 {
-		font-size: 40px;
-		margin: 2px 0;
-	}
-
-	h3 {
-		font-size: 15px;
-	}
-
-	a.hide {
-		color: var(--primary-50);
+		color: var(--black);
 	}
 }
