--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
 	--black: #232323;
 	--black50: #23232380;
 	--yellow: #ffe38c;
+	--border: double 2px var(--white);
 }
 
 html,
@@ -36,7 +37,7 @@ a {
 a {
 	color: var(--black);
 	background: var(--black);
-	border: double var(--white) 2px;
+	border: var(--border);
 	padding: 2px 6px;
 
 	text-decoration: none;
@@ -123,7 +124,7 @@ a.centreButton:hover {
 
 a.centreButton.alt {
 	background: var(--black);
-	border: double var(--white) 2px;
+	border: var(--border);
 	color: var(--white);
 }
 
