--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@tailwind base;
+@import 'normalize.css';
 /* putting custom CSS before `@tailwind utilities;` so utilities can override it */
 
 /* APP */
